# Qt

01/Project/Test-project/: CMakeLists.txt
02/HW-02/: CMakeLists.txt  header.h  main.cpp
03/: readme.md
03/HW-03/: CMakeLists.txt  mainwindow.ui
03_new/HW-03_new/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
03_new/HW-03_new_Dialog/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  infowindow.cpp  infowindow.h  infowindow.ui
03_new/HW-03_new_MainWindow/: dialog.h  mainwindow.ui
04/HW-04/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
05/: readme.md
05/HW-05/: CMakeLists.txt  Resources.qrc  Stopwatch.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp
05/HW-05_v2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.h
06/PreConcurrent/: CMakeLists.txt  mainwindow.cpp
07/PreGraphic/: mainwindow.cpp  mainwindow.h
08/08_PreDataBase/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
09/PreUDPsocket/: mainwindow.cpp  mainwindow.h  udpworker.cpp
10/PreTCPclient/: mainwindow.cpp  tcpclient.cpp  tcpclient.h
